--- a/client/src/nav/nav.css
+++ b/client/src/nav/nav.css
@@ -16,12 +16,14 @@
     position: relative;
     font-size: 20px;
     bottom: 20px;
+    left: 20px;
 }
 
 .login {
     color: #dee0e6;
     position: relative;
     font-size: 20px;
+    bottom: 20px;
 }
 
 .logout {
@@ -35,4 +37,37 @@
     position: absolute;
     bottom: 0;
     width: 100%;
+}
+
+@media screen and (max-width: 600px) {
+    .text-header h3 {
+        position: relative;
+        color: #dee0e6;
+        text-align: center;
+        font-size: 20px;
+        height: 15px;
+        top: 2px;
+        left : 20px;
+    }
+    .userName {
+        color: #dee0e6;
+        position: relative;
+        font-size: 15px;
+        top: 9px;
+    }
+
+    .logout {
+        color: #dee0e6;
+        position: relative;
+        font-size: 15px;
+        top: 9px;
+    }
+
+    .login {
+        color: #dee0e6;
+        position: relative;
+        font-size: 15px;
+        bottom: 2px;
+    }
+
 }
